# zosci-bot

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
examples/: zosci-bot.config.yaml
zosci_bot/: config.py  main.py  plugins.py
