[metadata]
name = zosci-bot
author = Felipe Reyes
author-email = felipe.reyes@canonical.com
summary = Mattermost Bot to capture zosci information
description-file = README.md
description-content-type = text/x-markdown; charset=UTF-8
home-page = https://github.com/freyes/zosci-bot
project_urls =
    Bug Tracker = https://github.com/freyes/zosci-bot/issues
    Documentation = https://github.com/freyes/zosci-bot
    Source Code = https://github.com/freyes/zosci-bot
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    zosci_bot

[entry_points]
console_scripts =
    zosci-bot = zosci_bot.main:main
